--- a/turtlebot3_navigation/config/clicked_points.yaml
+++ b/turtlebot3_navigation/config/clicked_points.yaml
@@ -1,7 +1,24 @@
-header:
-  stamp: 1886.528
-  frame_id: map
-point:
-  x: 1.79691743850708
-  y: -0.4304893910884857
-  z: -0.001434326171875
+- header:
+    seq: 1
+    stamp: 34.608
+    frame_id: map
+  point:
+    x: -0.4154433310031891
+    y: -0.4605231881141663
+    z: -0.001434326171875
+- header:
+    seq: 2
+    stamp: 39.72
+    frame_id: map
+  point:
+    x: 0.7357849478721619
+    y: -1.691922783851624
+    z: -0.001373291015625
+- header:
+    seq: 3
+    stamp: 42.433
+    frame_id: map
+  point:
+    x: 1.576682567596436
+    y: -0.5706486701965332
+    z: -0.001373291015625
