--- a/turtlebot3_navigation/package.xml
+++ b/turtlebot3_navigation/package.xml
@@ -35,4 +35,14 @@
   <build_depend>yaml-cpp</build_depend>
   <build_export_depend>yaml-cpp</build_export_depend>
   <exec_depend>yaml-cpp</exec_depend>
+
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>move_base_msgs</build_depend>
+  <build_export_depend>actionlib</build_export_depend>
+  <build_export_depend>actionlib_msgs</build_export_depend>
+  <build_export_depend>move_base_msgs</build_export_depend>
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>move_base_msgs</exec_depend>
 </package>
