--- a/waypoint/package.xml
+++ b/waypoint/package.xml
@@ -18,17 +18,23 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>qtbase5-dev</build_depend>
+  <build_depend>interactive_markers</build_depend>
+  <build_depend>tf</build_depend>
+
   <!--패키지를 빌드하기 위해 필요한 패키지를 적는다-->
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>visualization_msgs</build_export_depend>
+  <build_export_depend>interactive_markers</build_export_depend>
+  <build_export_depend>tf</build_export_depend>
   <!--runtime 에 필요한 패키지를 적는다-->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
-
+  <exec_depend>tf</exec_depend>
   <build_depend>yaml-cpp</build_depend>
   <build_export_depend>yaml-cpp</build_export_depend>
   <exec_depend>yaml-cpp</exec_depend>
@@ -42,4 +48,6 @@
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>move_base_msgs</exec_depend>
+
+  
 </package>
