--- a/waypoint/param/file_path_param.yaml
+++ b/waypoint/param/file_path_param.yaml
@@ -1,2 +1,3 @@
-point_file_path: /home/asura/turtlebot_ws/src/turtlebot3/waypoint/config/clicked_points.yaml
+point_file_path: /home/asura/turtlebot_ws/src/turtlebot3/waypoint/config/move_paths.yaml
 object_file_path: /home/asura/turtlebot_ws/src/turtlebot3/waypoint/config/save_objects.yaml
+polygon_file_path: /home/asura/turtlebot_ws/src/turtlebot3/waypoint/config/save_polygons.yaml
