--- a/waypoint/config/move_paths.yaml
+++ b/waypoint/config/move_paths.yaml
@@ -1,40 +1,24 @@
 - header:
-    seq: 2
-    stamp: 1716791078.222823
+    seq: 0
+    stamp: 176.769
     frame_id: map
   point:
-    x: 1.817218661308289
-    y: -1.591248393058777
+    x: 1.904719829559326
+    y: -0.8575425148010254
     z: 0.002471923828125
 - header:
-    seq: 3
-    stamp: 1716791079.018371
+    seq: 1
+    stamp: 177.724
     frame_id: map
   point:
-    x: 1.824487805366516
-    y: 1.656642079353333
-    z: 0.00250244140625
+    x: 1.799960494041443
+    y: 1.391124248504639
+    z: 0.002471923828125
 - header:
-    seq: 4
-    stamp: 1716791080.662291
+    seq: 2
+    stamp: 178.848
     frame_id: map
   point:
-    x: -1.548270106315613
-    y: 1.765632033348083
+    x: 0.5714161992073059
+    y: 1.915178179740906
     z: -0.001434326171875
-- header:
-    seq: 5
-    stamp: 1716791082.148135
-    frame_id: map
-  point:
-    x: -1.65730345249176
-    y: -1.540386199951172
-    z: -0.001434326171875
-- header:
-    seq: 6
-    stamp: 1716791083.816382
-    frame_id: map
-  point:
-    x: 0.0581507571041584
-    y: -2.165260314941406
-    z: -0.0013427734375
