--- a/waypoint/config/save_objects.yaml
+++ b/waypoint/config/save_objects.yaml
@@ -1,11 +1,22 @@
 - header:
     seq: 1
-    stamp: 1716792857.62798
+    stamp: 190.629
     frame_id: map
   object:
-    name: ee
+    name: chair
     size: 100
   point:
-    x: 1.137578964233398
-    y: -0.02543944120407104
-    z: 0.000518798828125
+    x: 1.166641265153885
+    y: 1.038579136133194
+    z: -0.003387451171875
+- header:
+    seq: 3
+    stamp: 203.397
+    frame_id: map
+  object:
+    name: desk
+    size: 100
+  point:
+    x: 1.133308351039886
+    y: -0.02382070571184158
+    z: 0.002471923828125
